# devin-mcp

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
docs/: architecture.md
docs/adr/: 0001-use-rmcp-sdk.md  README.md
docs/plan/: README.md  automate-cargo-version-release.md
scripts/: installer.sh
src/: devin_client.rs  main.rs  server.rs
tests/: integration.rs
